Programming languages and paradigms/Interpreter/examples/bad/return_not_enough.ho
func main() {
    print(f());
}

func f() int {
    return; // error:6:5: not enough arguments to return
}